<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Minecraft Query</string>
    <string name="text_host">Ip Address</string>
    <string name="text_port">Port</string>
    <string name="text_defaultport">25565</string>
    <string name="text_players">Players:</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="dialog_information">Information</string>
    <string name="button_ok">OK</string>
    <string name="pref_keepScreenOnTitle">Keep screen on</string>
    <string name="action_about">About</string>
    <string name="title_settings">Minecraft Query settings</string>
    <string name="button_check">Check</string>
    <string name="pref_general_title">General</string>
</resources>
